Fix the z-index issue that was causing the compose mail popup to be placed bellow the tasks sidebar.

--- a/src/gmail-righttasks.css
+++ b/src/gmail-righttasks.css
@@ -14,6 +14,7 @@
 	position: absolute !important;
 	bottom: 0 !important;
 	right: 0 !important;
+	z-index: 0;
 }
 
 .gmail-righttasks {
